FlightPath 6.x Changelog
========================


2021-12-17
  Cleaned up old comments.
  
  Fixed bug where we were determing a course's transfer eqv.  It was failing even though the souce hours were within the range
  of min and max hours.  (We were only looking at == max hours, rather than a range from min to max).


2021-12-15
  Adding some extra instructions for the edit groups page.

  Fixed bug where courses worth less than 1 credit hour were not showing as repeatable in groups, even when the "set catalog repeats" box was checked.
    
  Adding concept of "delete_flag" to advising_sessions table, similar to the advising_comments table.  Also added permission to let users delete advising sessions
  for up to 3 months after posting, again, similar to the comments module.
    
  Updated comments module to make sure only the original author of a comment can delete it.
  
  
      

2021-12-14
  Added extra protection in our _fp_error_handler to not accidentally log passwords in plaintext.
  
  Fixed small bug in viewing watchdog entries where page was set to 1, always sending us to the second page
  of results if we clicked the Watchdog breadcrumb. 
  

2021-12-13
  Added code to create /custom/files/content_uploads/ folder.  Updated content module and engagements module
  to place uploaded files there.
  
  Fixed spelling of "README" file.
  

2021-12-12
  In calendar, when parsing ical feeds, we now correctly ignore time marked as "free" (transp == TRANSPARENT in the event).  Also fixed bug where you couldn't schedule appointments
  on the exact start and stop hour of a date's availability window (based on the "default" setting for that unavail time).
  
  Altered the way Zoom API works to better support api specs for Zoom marketplace apps.
  
  If SMS is not enabled, then txt messages cannot be selected as a default notification method.
  

2021-12-09
  Added more watchdog (debug) statements having to do with checking IMAP server for messages.
  
